라우팅 설정 개선: netlify.toml 리다이렉트 설정 단순화 및 index.html에 base 태그 추가

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
       content="부동산 360도 파노라마 뷰어"
     />
+    <base href="/" />
     <title>부동산 360도 파노라마</title>
   </head>
   <body>
