--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="부동산 360도 파노라마 뷰어"
     />
     <base href="/" />
-    <title>부동산 360도 파노라마</title>
+    <title>부동산 파노라마</title>
   </head>
   <body>
     <noscript>이 앱을 실행하기 위해서는 자바스크립트를 활성화해야 합니다.</noscript>
